Added to option to use boldsymbol or bm for bold symbols

--- a/fragments/bold_italic.sty
+++ b/fragments/bold_italic.sty
@@ -1,66 +1,66 @@
 % Bold italic letters
-\newcommand{\BJA}{{\bm{\mathit{A}}}}
-\newcommand{\BJB}{{\bm{\mathit{B}}}}
-\newcommand{\BJC}{{\bm{\mathit{C}}}}
-\newcommand{\BJD}{{\bm{\mathit{D}}}}
-\newcommand{\BJE}{{\bm{\mathit{E}}}}
-\newcommand{\BJF}{{\bm{\mathit{F}}}}
-\newcommand{\BJG}{{\bm{\mathit{G}}}}
-\newcommand{\BJH}{{\bm{\mathit{H}}}}
-\newcommand{\BJI}{{\bm{\mathit{I}}}}
-\newcommand{\BJJ}{{\bm{\mathit{J}}}}
-\newcommand{\BJK}{{\bm{\mathit{K}}}}
-\newcommand{\BJL}{{\bm{\mathit{L}}}}
-\newcommand{\BJM}{{\bm{\mathit{M}}}}
-\newcommand{\BJN}{{\bm{\mathit{N}}}}
-\newcommand{\BJO}{{\bm{\mathit{O}}}}
-\newcommand{\BJP}{{\bm{\mathit{P}}}}
-\newcommand{\BJQ}{{\bm{\mathit{Q}}}}
-\newcommand{\BJR}{{\bm{\mathit{R}}}}
-\newcommand{\BJS}{{\bm{\mathit{S}}}}
-\newcommand{\BJT}{{\bm{\mathit{T}}}}
-\newcommand{\BJU}{{\bm{\mathit{U}}}}
-\newcommand{\BJV}{{\bm{\mathit{V}}}}
-\newcommand{\BJW}{{\bm{\mathit{W}}}}
-\newcommand{\BJX}{{\bm{\mathit{X}}}}
-\newcommand{\BJY}{{\bm{\mathit{Y}}}}
-\newcommand{\BJZ}{{\bm{\mathit{Z}}}}
-\newcommand{\BJa}{{\bm{\mathit{a}}}}
-\newcommand{\BJb}{{\bm{\mathit{b}}}}
-\newcommand{\BJc}{{\bm{\mathit{c}}}}
-\newcommand{\BJd}{{\bm{\mathit{d}}}}
-\newcommand{\BJe}{{\bm{\mathit{e}}}}
-\newcommand{\BJf}{{\bm{\mathit{f}}}}
-\newcommand{\BJg}{{\bm{\mathit{g}}}}
-\newcommand{\BJh}{{\bm{\mathit{h}}}}
-\newcommand{\BJi}{{\bm{\mathit{i}}}}
-\newcommand{\BJj}{{\bm{\mathit{j}}}}
-\newcommand{\BJk}{{\bm{\mathit{k}}}}
-\newcommand{\BJl}{{\bm{\mathit{l}}}}
-\newcommand{\BJm}{{\bm{\mathit{m}}}}
-\newcommand{\BJn}{{\bm{\mathit{n}}}}
-\newcommand{\BJo}{{\bm{\mathit{o}}}}
-\newcommand{\BJp}{{\bm{\mathit{p}}}}
-\newcommand{\BJq}{{\bm{\mathit{q}}}}
-\newcommand{\BJr}{{\bm{\mathit{r}}}}
-\newcommand{\BJs}{{\bm{\mathit{s}}}}
-\newcommand{\BJt}{{\bm{\mathit{t}}}}
-\newcommand{\BJu}{{\bm{\mathit{u}}}}
-\newcommand{\BJv}{{\bm{\mathit{v}}}}
-\newcommand{\BJw}{{\bm{\mathit{w}}}}
-\newcommand{\BJx}{{\bm{\mathit{x}}}}
-\newcommand{\BJy}{{\bm{\mathit{y}}}}
-\newcommand{\BJz}{{\bm{\mathit{z}}}}
+\newcommand{\BJA}{{\boldcommand{\mathit{A}}}}
+\newcommand{\BJB}{{\boldcommand{\mathit{B}}}}
+\newcommand{\BJC}{{\boldcommand{\mathit{C}}}}
+\newcommand{\BJD}{{\boldcommand{\mathit{D}}}}
+\newcommand{\BJE}{{\boldcommand{\mathit{E}}}}
+\newcommand{\BJF}{{\boldcommand{\mathit{F}}}}
+\newcommand{\BJG}{{\boldcommand{\mathit{G}}}}
+\newcommand{\BJH}{{\boldcommand{\mathit{H}}}}
+\newcommand{\BJI}{{\boldcommand{\mathit{I}}}}
+\newcommand{\BJJ}{{\boldcommand{\mathit{J}}}}
+\newcommand{\BJK}{{\boldcommand{\mathit{K}}}}
+\newcommand{\BJL}{{\boldcommand{\mathit{L}}}}
+\newcommand{\BJM}{{\boldcommand{\mathit{M}}}}
+\newcommand{\BJN}{{\boldcommand{\mathit{N}}}}
+\newcommand{\BJO}{{\boldcommand{\mathit{O}}}}
+\newcommand{\BJP}{{\boldcommand{\mathit{P}}}}
+\newcommand{\BJQ}{{\boldcommand{\mathit{Q}}}}
+\newcommand{\BJR}{{\boldcommand{\mathit{R}}}}
+\newcommand{\BJS}{{\boldcommand{\mathit{S}}}}
+\newcommand{\BJT}{{\boldcommand{\mathit{T}}}}
+\newcommand{\BJU}{{\boldcommand{\mathit{U}}}}
+\newcommand{\BJV}{{\boldcommand{\mathit{V}}}}
+\newcommand{\BJW}{{\boldcommand{\mathit{W}}}}
+\newcommand{\BJX}{{\boldcommand{\mathit{X}}}}
+\newcommand{\BJY}{{\boldcommand{\mathit{Y}}}}
+\newcommand{\BJZ}{{\boldcommand{\mathit{Z}}}}
+\newcommand{\BJa}{{\boldcommand{\mathit{a}}}}
+\newcommand{\BJb}{{\boldcommand{\mathit{b}}}}
+\newcommand{\BJc}{{\boldcommand{\mathit{c}}}}
+\newcommand{\BJd}{{\boldcommand{\mathit{d}}}}
+\newcommand{\BJe}{{\boldcommand{\mathit{e}}}}
+\newcommand{\BJf}{{\boldcommand{\mathit{f}}}}
+\newcommand{\BJg}{{\boldcommand{\mathit{g}}}}
+\newcommand{\BJh}{{\boldcommand{\mathit{h}}}}
+\newcommand{\BJi}{{\boldcommand{\mathit{i}}}}
+\newcommand{\BJj}{{\boldcommand{\mathit{j}}}}
+\newcommand{\BJk}{{\boldcommand{\mathit{k}}}}
+\newcommand{\BJl}{{\boldcommand{\mathit{l}}}}
+\newcommand{\BJm}{{\boldcommand{\mathit{m}}}}
+\newcommand{\BJn}{{\boldcommand{\mathit{n}}}}
+\newcommand{\BJo}{{\boldcommand{\mathit{o}}}}
+\newcommand{\BJp}{{\boldcommand{\mathit{p}}}}
+\newcommand{\BJq}{{\boldcommand{\mathit{q}}}}
+\newcommand{\BJr}{{\boldcommand{\mathit{r}}}}
+\newcommand{\BJs}{{\boldcommand{\mathit{s}}}}
+\newcommand{\BJt}{{\boldcommand{\mathit{t}}}}
+\newcommand{\BJu}{{\boldcommand{\mathit{u}}}}
+\newcommand{\BJv}{{\boldcommand{\mathit{v}}}}
+\newcommand{\BJw}{{\boldcommand{\mathit{w}}}}
+\newcommand{\BJx}{{\boldcommand{\mathit{x}}}}
+\newcommand{\BJy}{{\boldcommand{\mathit{y}}}}
+\newcommand{\BJz}{{\boldcommand{\mathit{z}}}}
 
 % bold italic numbers
-\newcommand{\BJzero }{{\bm{\mathit{0}}}}
-\newcommand{\BJone  }{{\bm{\mathit{1}}}}
-\newcommand{\BJtwo  }{{\bm{\mathit{2}}}}
-\newcommand{\BJthree}{{\bm{\mathit{3}}}}
-\newcommand{\BJfour }{{\bm{\mathit{4}}}}
-\newcommand{\BJfive }{{\bm{\mathit{5}}}}
-\newcommand{\BJsix  }{{\bm{\mathit{6}}}}
-\newcommand{\BJseven}{{\bm{\mathit{7}}}}
-\newcommand{\BJeight}{{\bm{\mathit{8}}}}
-\newcommand{\BJnine }{{\bm{\mathit{9}}}}
+\newcommand{\BJzero }{{\boldcommand{\mathit{0}}}}
+\newcommand{\BJone  }{{\boldcommand{\mathit{1}}}}
+\newcommand{\BJtwo  }{{\boldcommand{\mathit{2}}}}
+\newcommand{\BJthree}{{\boldcommand{\mathit{3}}}}
+\newcommand{\BJfour }{{\boldcommand{\mathit{4}}}}
+\newcommand{\BJfive }{{\boldcommand{\mathit{5}}}}
+\newcommand{\BJsix  }{{\boldcommand{\mathit{6}}}}
+\newcommand{\BJseven}{{\boldcommand{\mathit{7}}}}
+\newcommand{\BJeight}{{\boldcommand{\mathit{8}}}}
+\newcommand{\BJnine }{{\boldcommand{\mathit{9}}}}
 
