--- a/fragments/cal_bold.sty
+++ b/fragments/cal_bold.sty
@@ -1,27 +1,27 @@
 % Calligraphic bold
-\newcommand{\BCA}{{\bm{\mathcal{A}}}}
-\newcommand{\BCB}{{\bm{\mathcal{B}}}}
-\newcommand{\BCC}{{\bm{\mathcal{C}}}}
-\newcommand{\BCD}{{\bm{\mathcal{D}}}}
-\newcommand{\BCE}{{\bm{\mathcal{E}}}}
-\newcommand{\BCF}{{\bm{\mathcal{F}}}}
-\newcommand{\BCG}{{\bm{\mathcal{G}}}}
-\newcommand{\BCH}{{\bm{\mathcal{H}}}}
-\newcommand{\BCI}{{\bm{\mathcal{I}}}}
-\newcommand{\BCJ}{{\bm{\mathcal{J}}}}
-\newcommand{\BCK}{{\bm{\mathcal{K}}}}
-\newcommand{\BCL}{{\bm{\mathcal{L}}}}
-\newcommand{\BCM}{{\bm{\mathcal{M}}}}
-\newcommand{\BCN}{{\bm{\mathcal{N}}}}
-\newcommand{\BCO}{{\bm{\mathcal{O}}}}
-\newcommand{\BCP}{{\bm{\mathcal{P}}}}
-\newcommand{\BCQ}{{\bm{\mathcal{Q}}}}
-\newcommand{\BCR}{{\bm{\mathcal{R}}}}
-\newcommand{\BCS}{{\bm{\mathcal{S}}}}
-\newcommand{\BCT}{{\bm{\mathcal{T}}}}
-\newcommand{\BCU}{{\bm{\mathcal{U}}}}
-\newcommand{\BCV}{{\bm{\mathcal{V}}}}
-\newcommand{\BCW}{{\bm{\mathcal{W}}}}
-\newcommand{\BCX}{{\bm{\mathcal{X}}}}
-\newcommand{\BCY}{{\bm{\mathcal{Y}}}}
-\newcommand{\BCZ}{{\bm{\mathcal{Z}}}}
+\newcommand{\BCA}{{\boldcommand{\mathcal{A}}}}
+\newcommand{\BCB}{{\boldcommand{\mathcal{B}}}}
+\newcommand{\BCC}{{\boldcommand{\mathcal{C}}}}
+\newcommand{\BCD}{{\boldcommand{\mathcal{D}}}}
+\newcommand{\BCE}{{\boldcommand{\mathcal{E}}}}
+\newcommand{\BCF}{{\boldcommand{\mathcal{F}}}}
+\newcommand{\BCG}{{\boldcommand{\mathcal{G}}}}
+\newcommand{\BCH}{{\boldcommand{\mathcal{H}}}}
+\newcommand{\BCI}{{\boldcommand{\mathcal{I}}}}
+\newcommand{\BCJ}{{\boldcommand{\mathcal{J}}}}
+\newcommand{\BCK}{{\boldcommand{\mathcal{K}}}}
+\newcommand{\BCL}{{\boldcommand{\mathcal{L}}}}
+\newcommand{\BCM}{{\boldcommand{\mathcal{M}}}}
+\newcommand{\BCN}{{\boldcommand{\mathcal{N}}}}
+\newcommand{\BCO}{{\boldcommand{\mathcal{O}}}}
+\newcommand{\BCP}{{\boldcommand{\mathcal{P}}}}
+\newcommand{\BCQ}{{\boldcommand{\mathcal{Q}}}}
+\newcommand{\BCR}{{\boldcommand{\mathcal{R}}}}
+\newcommand{\BCS}{{\boldcommand{\mathcal{S}}}}
+\newcommand{\BCT}{{\boldcommand{\mathcal{T}}}}
+\newcommand{\BCU}{{\boldcommand{\mathcal{U}}}}
+\newcommand{\BCV}{{\boldcommand{\mathcal{V}}}}
+\newcommand{\BCW}{{\boldcommand{\mathcal{W}}}}
+\newcommand{\BCX}{{\boldcommand{\mathcal{X}}}}
+\newcommand{\BCY}{{\boldcommand{\mathcal{Y}}}}
+\newcommand{\BCZ}{{\boldcommand{\mathcal{Z}}}}
