--- a/fragments/frak.sty
+++ b/fragments/frak.sty
@@ -1,129 +1,129 @@
 % Fraktur
-\newcommand{\frA}{{\mathfrak{A}}}
-\newcommand{\frB}{{\mathfrak{B}}}
-\newcommand{\frC}{{\mathfrak{C}}}
-\newcommand{\frD}{{\mathfrak{D}}}
-\newcommand{\frE}{{\mathfrak{E}}}
-\newcommand{\frF}{{\mathfrak{F}}}
-\newcommand{\frG}{{\mathfrak{G}}}
-\newcommand{\frH}{{\mathfrak{H}}}
-\newcommand{\frI}{{\mathfrak{I}}}
-\newcommand{\frJ}{{\mathfrak{J}}}
-\newcommand{\frK}{{\mathfrak{K}}}
-\newcommand{\frL}{{\mathfrak{L}}}
-\newcommand{\frM}{{\mathfrak{M}}}
-\newcommand{\frN}{{\mathfrak{N}}}
-\newcommand{\frO}{{\mathfrak{O}}}
-\newcommand{\frP}{{\mathfrak{P}}}
-\newcommand{\frQ}{{\mathfrak{Q}}}
-\newcommand{\frR}{{\mathfrak{R}}}
-\newcommand{\frS}{{\mathfrak{S}}}
-\newcommand{\frT}{{\mathfrak{T}}}
-\newcommand{\frU}{{\mathfrak{U}}}
-\newcommand{\frV}{{\mathfrak{V}}}
-\newcommand{\frW}{{\mathfrak{W}}}
-\newcommand{\frX}{{\mathfrak{X}}}
-\newcommand{\frY}{{\mathfrak{Y}}}
-\newcommand{\frZ}{{\mathfrak{Z}}}
-\newcommand{\fra}{{\mathfrak{a}}}
-\newcommand{\frb}{{\mathfrak{b}}}
-\newcommand{\frc}{{\mathfrak{c}}}
-\newcommand{\frd}{{\mathfrak{d}}}
-\newcommand{\fre}{{\mathfrak{e}}}
-\newcommand{\frf}{{\mathfrak{f}}}
-\newcommand{\frg}{{\mathfrak{g}}}
-\newcommand{\frh}{{\mathfrak{h}}}
-\newcommand{\fri}{{\mathfrak{i}}}
-\newcommand{\frj}{{\mathfrak{j}}}
-\newcommand{\frk}{{\mathfrak{k}}}
-\newcommand{\frl}{{\mathfrak{l}}}
-\newcommand{\frm}{{\mathfrak{m}}}
-\newcommand{\frn}{{\mathfrak{n}}}
-\newcommand{\fro}{{\mathfrak{o}}}
-\newcommand{\frp}{{\mathfrak{p}}}
-\newcommand{\frq}{{\mathfrak{q}}}
-\newcommand{\frr}{{\mathfrak{r}}}
-\newcommand{\frs}{{\mathfrak{s}}}
-\newcommand{\frt}{{\mathfrak{t}}}
-\newcommand{\fru}{{\mathfrak{u}}}
-\newcommand{\frv}{{\mathfrak{v}}}
-\newcommand{\frw}{{\mathfrak{w}}}
-\newcommand{\frx}{{\mathfrak{x}}}
-\newcommand{\fry}{{\mathfrak{y}}}
-\newcommand{\frz}{{\mathfrak{z}}}
+\newcommand{\KA}{{\mathfrak{A}}}
+\newcommand{\KB}{{\mathfrak{B}}}
+\newcommand{\KC}{{\mathfrak{C}}}
+\newcommand{\KD}{{\mathfrak{D}}}
+\newcommand{\KE}{{\mathfrak{E}}}
+\newcommand{\KF}{{\mathfrak{F}}}
+\newcommand{\KG}{{\mathfrak{G}}}
+\newcommand{\KH}{{\mathfrak{H}}}
+\newcommand{\KI}{{\mathfrak{I}}}
+\newcommand{\KJ}{{\mathfrak{J}}}
+\newcommand{\KK}{{\mathfrak{K}}}
+\newcommand{\KL}{{\mathfrak{L}}}
+\newcommand{\KM}{{\mathfrak{M}}}
+\newcommand{\KN}{{\mathfrak{N}}}
+\newcommand{\KO}{{\mathfrak{O}}}
+\newcommand{\KP}{{\mathfrak{P}}}
+\newcommand{\KQ}{{\mathfrak{Q}}}
+\newcommand{\KR}{{\mathfrak{R}}}
+\newcommand{\KS}{{\mathfrak{S}}}
+\newcommand{\KT}{{\mathfrak{T}}}
+\newcommand{\KU}{{\mathfrak{U}}}
+\newcommand{\KV}{{\mathfrak{V}}}
+\newcommand{\KW}{{\mathfrak{W}}}
+\newcommand{\KX}{{\mathfrak{X}}}
+\newcommand{\KY}{{\mathfrak{Y}}}
+\newcommand{\KZ}{{\mathfrak{Z}}}
+\newcommand{\Ka}{{\mathfrak{a}}}
+\newcommand{\Kb}{{\mathfrak{b}}}
+\newcommand{\Kc}{{\mathfrak{c}}}
+\newcommand{\Kd}{{\mathfrak{d}}}
+\newcommand{\Ke}{{\mathfrak{e}}}
+\newcommand{\Kf}{{\mathfrak{f}}}
+\newcommand{\Kg}{{\mathfrak{g}}}
+\newcommand{\Kh}{{\mathfrak{h}}}
+\newcommand{\Ki}{{\mathfrak{i}}}
+\newcommand{\Kj}{{\mathfrak{j}}}
+\newcommand{\Kk}{{\mathfrak{k}}}
+\newcommand{\Kl}{{\mathfrak{l}}}
+\newcommand{\Km}{{\mathfrak{m}}}
+\newcommand{\Kn}{{\mathfrak{n}}}
+\newcommand{\Ko}{{\mathfrak{o}}}
+\newcommand{\Kp}{{\mathfrak{p}}}
+\newcommand{\Kq}{{\mathfrak{q}}}
+\newcommand{\Kr}{{\mathfrak{r}}}
+\newcommand{\Ks}{{\mathfrak{s}}}
+\newcommand{\Kt}{{\mathfrak{t}}}
+\newcommand{\Ku}{{\mathfrak{u}}}
+\newcommand{\Kv}{{\mathfrak{v}}}
+\newcommand{\Kw}{{\mathfrak{w}}}
+\newcommand{\Kx}{{\mathfrak{x}}}
+\newcommand{\Ky}{{\mathfrak{y}}}
+\newcommand{\Kz}{{\mathfrak{z}}}
 
-\newcommand{\frzero }{{\mathfrak{0}}}
-\newcommand{\frone  }{{\mathfrak{1}}}
-\newcommand{\frtwo  }{{\mathfrak{2}}}
-\newcommand{\frthree}{{\mathfrak{3}}}
-\newcommand{\frfour }{{\mathfrak{4}}}
-\newcommand{\frfive }{{\mathfrak{5}}}
-\newcommand{\frsix  }{{\mathfrak{6}}}
-\newcommand{\frseven}{{\mathfrak{7}}}
-\newcommand{\freight}{{\mathfrak{8}}}
-\newcommand{\frnine }{{\mathfrak{9}}}
+\newcommand{\Kzero }{{\mathfrak{0}}}
+\newcommand{\Kone  }{{\mathfrak{1}}}
+\newcommand{\Ktwo  }{{\mathfrak{2}}}
+\newcommand{\Kthree}{{\mathfrak{3}}}
+\newcommand{\Kfour }{{\mathfrak{4}}}
+\newcommand{\Kfive }{{\mathfrak{5}}}
+\newcommand{\Ksix  }{{\mathfrak{6}}}
+\newcommand{\Kseven}{{\mathfrak{7}}}
+\newcommand{\Keight}{{\mathfrak{8}}}
+\newcommand{\Knine }{{\mathfrak{9}}}
 
 % Fraktur bold
-\newcommand{\BfrA}{\bm{{\mathfrak{A}}}}
-\newcommand{\BfrB}{\bm{{\mathfrak{B}}}}
-\newcommand{\BfrC}{\bm{{\mathfrak{C}}}}
-\newcommand{\BfrD}{\bm{{\mathfrak{D}}}}
-\newcommand{\BfrE}{\bm{{\mathfrak{E}}}}
-\newcommand{\BfrF}{\bm{{\mathfrak{F}}}}
-\newcommand{\BfrG}{\bm{{\mathfrak{G}}}}
-\newcommand{\BfrH}{\bm{{\mathfrak{H}}}}
-\newcommand{\BfrI}{\bm{{\mathfrak{I}}}}
-\newcommand{\BfrJ}{\bm{{\mathfrak{J}}}}
-\newcommand{\BfrK}{\bm{{\mathfrak{K}}}}
-\newcommand{\BfrL}{\bm{{\mathfrak{L}}}}
-\newcommand{\BfrM}{\bm{{\mathfrak{M}}}}
-\newcommand{\BfrN}{\bm{{\mathfrak{N}}}}
-\newcommand{\BfrO}{\bm{{\mathfrak{O}}}}
-\newcommand{\BfrP}{\bm{{\mathfrak{P}}}}
-\newcommand{\BfrQ}{\bm{{\mathfrak{Q}}}}
-\newcommand{\BfrR}{\bm{{\mathfrak{R}}}}
-\newcommand{\BfrS}{\bm{{\mathfrak{S}}}}
-\newcommand{\BfrT}{\bm{{\mathfrak{T}}}}
-\newcommand{\BfrU}{\bm{{\mathfrak{U}}}}
-\newcommand{\BfrV}{\bm{{\mathfrak{V}}}}
-\newcommand{\BfrW}{\bm{{\mathfrak{W}}}}
-\newcommand{\BfrX}{\bm{{\mathfrak{X}}}}
-\newcommand{\BfrY}{\bm{{\mathfrak{Y}}}}
-\newcommand{\BfrZ}{\bm{{\mathfrak{Z}}}}
-\newcommand{\Bfra}{\bm{{\mathfrak{a}}}}
-\newcommand{\Bfrb}{\bm{{\mathfrak{b}}}}
-\newcommand{\Bfrc}{\bm{{\mathfrak{c}}}}
-\newcommand{\Bfrd}{\bm{{\mathfrak{d}}}}
-\newcommand{\Bfre}{\bm{{\mathfrak{e}}}}
-\newcommand{\Bfrf}{\bm{{\mathfrak{f}}}}
-\newcommand{\Bfrg}{\bm{{\mathfrak{g}}}}
-\newcommand{\Bfrh}{\bm{{\mathfrak{h}}}}
-\newcommand{\Bfri}{\bm{{\mathfrak{i}}}}
-\newcommand{\Bfrj}{\bm{{\mathfrak{j}}}}
-\newcommand{\Bfrk}{\bm{{\mathfrak{k}}}}
-\newcommand{\Bfrl}{\bm{{\mathfrak{l}}}}
-\newcommand{\Bfrm}{\bm{{\mathfrak{m}}}}
-\newcommand{\Bfrn}{\bm{{\mathfrak{n}}}}
-\newcommand{\Bfro}{\bm{{\mathfrak{o}}}}
-\newcommand{\Bfrp}{\bm{{\mathfrak{p}}}}
-\newcommand{\Bfrq}{\bm{{\mathfrak{q}}}}
-\newcommand{\Bfrr}{\bm{{\mathfrak{r}}}}
-\newcommand{\Bfrs}{\bm{{\mathfrak{s}}}}
-\newcommand{\Bfrt}{\bm{{\mathfrak{t}}}}
-\newcommand{\Bfru}{\bm{{\mathfrak{u}}}}
-\newcommand{\Bfrv}{\bm{{\mathfrak{v}}}}
-\newcommand{\Bfrw}{\bm{{\mathfrak{w}}}}
-\newcommand{\Bfrx}{\bm{{\mathfrak{x}}}}
-\newcommand{\Bfry}{\bm{{\mathfrak{y}}}}
-\newcommand{\Bfrz}{\bm{{\mathfrak{z}}}}
+\newcommand{\BKA}{\boldcommand{{\mathfrak{A}}}}
+\newcommand{\BKB}{\boldcommand{{\mathfrak{B}}}}
+\newcommand{\BKC}{\boldcommand{{\mathfrak{C}}}}
+\newcommand{\BKD}{\boldcommand{{\mathfrak{D}}}}
+\newcommand{\BKE}{\boldcommand{{\mathfrak{E}}}}
+\newcommand{\BKF}{\boldcommand{{\mathfrak{F}}}}
+\newcommand{\BKG}{\boldcommand{{\mathfrak{G}}}}
+\newcommand{\BKH}{\boldcommand{{\mathfrak{H}}}}
+\newcommand{\BKI}{\boldcommand{{\mathfrak{I}}}}
+\newcommand{\BKJ}{\boldcommand{{\mathfrak{J}}}}
+\newcommand{\BKK}{\boldcommand{{\mathfrak{K}}}}
+\newcommand{\BKL}{\boldcommand{{\mathfrak{L}}}}
+\newcommand{\BKM}{\boldcommand{{\mathfrak{M}}}}
+\newcommand{\BKN}{\boldcommand{{\mathfrak{N}}}}
+\newcommand{\BKO}{\boldcommand{{\mathfrak{O}}}}
+\newcommand{\BKP}{\boldcommand{{\mathfrak{P}}}}
+\newcommand{\BKQ}{\boldcommand{{\mathfrak{Q}}}}
+\newcommand{\BKR}{\boldcommand{{\mathfrak{R}}}}
+\newcommand{\BKS}{\boldcommand{{\mathfrak{S}}}}
+\newcommand{\BKT}{\boldcommand{{\mathfrak{T}}}}
+\newcommand{\BKU}{\boldcommand{{\mathfrak{U}}}}
+\newcommand{\BKV}{\boldcommand{{\mathfrak{V}}}}
+\newcommand{\BKW}{\boldcommand{{\mathfrak{W}}}}
+\newcommand{\BKX}{\boldcommand{{\mathfrak{X}}}}
+\newcommand{\BKY}{\boldcommand{{\mathfrak{Y}}}}
+\newcommand{\BKZ}{\boldcommand{{\mathfrak{Z}}}}
+\newcommand{\BKa}{\boldcommand{{\mathfrak{a}}}}
+\newcommand{\BKb}{\boldcommand{{\mathfrak{b}}}}
+\newcommand{\BKc}{\boldcommand{{\mathfrak{c}}}}
+\newcommand{\BKd}{\boldcommand{{\mathfrak{d}}}}
+\newcommand{\BKe}{\boldcommand{{\mathfrak{e}}}}
+\newcommand{\BKf}{\boldcommand{{\mathfrak{f}}}}
+\newcommand{\BKg}{\boldcommand{{\mathfrak{g}}}}
+\newcommand{\BKh}{\boldcommand{{\mathfrak{h}}}}
+\newcommand{\BKi}{\boldcommand{{\mathfrak{i}}}}
+\newcommand{\BKj}{\boldcommand{{\mathfrak{j}}}}
+\newcommand{\BKk}{\boldcommand{{\mathfrak{k}}}}
+\newcommand{\BKl}{\boldcommand{{\mathfrak{l}}}}
+\newcommand{\BKm}{\boldcommand{{\mathfrak{m}}}}
+\newcommand{\BKn}{\boldcommand{{\mathfrak{n}}}}
+\newcommand{\BKo}{\boldcommand{{\mathfrak{o}}}}
+\newcommand{\BKp}{\boldcommand{{\mathfrak{p}}}}
+\newcommand{\BKq}{\boldcommand{{\mathfrak{q}}}}
+\newcommand{\BKr}{\boldcommand{{\mathfrak{r}}}}
+\newcommand{\BKs}{\boldcommand{{\mathfrak{s}}}}
+\newcommand{\BKt}{\boldcommand{{\mathfrak{t}}}}
+\newcommand{\BKu}{\boldcommand{{\mathfrak{u}}}}
+\newcommand{\BKv}{\boldcommand{{\mathfrak{v}}}}
+\newcommand{\BKw}{\boldcommand{{\mathfrak{w}}}}
+\newcommand{\BKx}{\boldcommand{{\mathfrak{x}}}}
+\newcommand{\BKy}{\boldcommand{{\mathfrak{y}}}}
+\newcommand{\BKz}{\boldcommand{{\mathfrak{z}}}}
 
-\newcommand{\Bfrzero }{\bm{{\mathfrak{0}}}}
-\newcommand{\Bfrone  }{\bm{{\mathfrak{1}}}}
-\newcommand{\Bfrtwo  }{\bm{{\mathfrak{2}}}}
-\newcommand{\Bfrthree}{\bm{{\mathfrak{3}}}}
-\newcommand{\Bfrfour }{\bm{{\mathfrak{4}}}}
-\newcommand{\Bfrfive }{\bm{{\mathfrak{5}}}}
-\newcommand{\Bfrsix  }{\bm{{\mathfrak{6}}}}
-\newcommand{\Bfrseven}{\bm{{\mathfrak{7}}}}
-\newcommand{\Bfreight}{\bm{{\mathfrak{8}}}}
-\newcommand{\Bfrnine }{\bm{{\mathfrak{9}}}}
+\newcommand{\BKzero }{\boldcommand{{\mathfrak{0}}}}
+\newcommand{\BKone  }{\boldcommand{{\mathfrak{1}}}}
+\newcommand{\BKtwo  }{\boldcommand{{\mathfrak{2}}}}
+\newcommand{\BKthree}{\boldcommand{{\mathfrak{3}}}}
+\newcommand{\BKfour }{\boldcommand{{\mathfrak{4}}}}
+\newcommand{\BKfive }{\boldcommand{{\mathfrak{5}}}}
+\newcommand{\BKsix  }{\boldcommand{{\mathfrak{6}}}}
+\newcommand{\BKseven}{\boldcommand{{\mathfrak{7}}}}
+\newcommand{\BKeight}{\boldcommand{{\mathfrak{8}}}}
+\newcommand{\BKnine }{\boldcommand{{\mathfrak{9}}}}
