--- a/fragments/greek_bold.sty
+++ b/fragments/greek_bold.sty
@@ -1,41 +1,41 @@
 % Bold Greek
-\newcommand{\Balpha  }{{\bm{\alpha}        }}
-\newcommand{\Bbeta   }{{\bm{\beta}         }}
-\newcommand{\Bgamma  }{{\bm{\gamma}        }}
-\newcommand{\Bdelta  }{{\bm{\delta}        }}
-\newcommand{\Bepsilon}{{\bm{\epsilon}      }}
-\newcommand{\Bvareps }{{\bm{\varepsilon}   }}
-\newcommand{\Bvarepsilon}{{\bm{\varepsilon}}}
-\newcommand{\Bzeta   }{{\bm{\zeta}         }}
-\newcommand{\Beta    }{{\bm{\eta}          }}
-\newcommand{\Btheta  }{{\bm{\theta}        }}
-\newcommand{\Bvarthe }{{\bm{\vartheta}     }}
-\newcommand{\Biota   }{{\bm{\iota}         }}
-\newcommand{\Bkappa  }{{\bm{\kappa}        }}
-\newcommand{\Blambda }{{\bm{\lambda}       }}
-\newcommand{\Bmu     }{{\bm{\mu}           }}
-\newcommand{\Bnu     }{{\bm{\nu}           }}
-\newcommand{\Bxi     }{{\bm{\xi}           }}
-\newcommand{\Bpi     }{{\bm{\pi}           }}
-\newcommand{\Brho    }{{\bm{\rho}          }}
-\newcommand{\Bvrho   }{{\bm{\varrho}       }}
-\newcommand{\Bsigma  }{{\bm{\sigma}        }}
-\newcommand{\Bvsigma }{{\bm{\varsigma}     }}
-\newcommand{\Btau    }{{\bm{\tau}          }}
-\newcommand{\Bupsilon}{{\bm{\upsilon}      }}
-\newcommand{\Bphi    }{{\bm{\phi}          }}
-\newcommand{\Bvarphi }{{\bm{\varphi}       }}
-\newcommand{\Bchi    }{{\bm{\chi}          }}
-\newcommand{\Bpsi    }{{\bm{\psi}          }}
-\newcommand{\Bomega  }{{\bm{\omega}        }}
-\newcommand{\BGamma  }{{\bm{\Gamma}        }}
-\newcommand{\BDelta  }{{\bm{\Delta}        }}
-\newcommand{\BTheta  }{{\bm{\Theta}        }}
-\newcommand{\BLambda }{{\bm{\Lambda}       }}
-\newcommand{\BXi     }{{\bm{\Xi}           }}
-\newcommand{\BPi     }{{\bm{\Pi}           }}
-\newcommand{\BSigma  }{{\bm{\Sigma}        }}
-\newcommand{\BUpsilon}{{\bm{\Upsilon}      }}
-\newcommand{\BPhi    }{{\bm{\Phi}          }}
-\newcommand{\BPsi    }{{\bm{\Psi}          }}
-\newcommand{\BOmega  }{{\bm{\Omega}        }}
+\newcommand{\Balpha  }{{\boldcommand{\alpha}        }}
+\newcommand{\Bbeta   }{{\boldcommand{\beta}         }}
+\newcommand{\Bgamma  }{{\boldcommand{\gamma}        }}
+\newcommand{\Bdelta  }{{\boldcommand{\delta}        }}
+\newcommand{\Bepsilon}{{\boldcommand{\epsilon}      }}
+\newcommand{\Bvareps }{{\boldcommand{\varepsilon}   }}
+\newcommand{\Bvarepsilon}{{\boldcommand{\varepsilon}}}
+\newcommand{\Bzeta   }{{\boldcommand{\zeta}         }}
+\newcommand{\Beta    }{{\boldcommand{\eta}          }}
+\newcommand{\Btheta  }{{\boldcommand{\theta}        }}
+\newcommand{\Bvarthe }{{\boldcommand{\vartheta}     }}
+\newcommand{\Biota   }{{\boldcommand{\iota}         }}
+\newcommand{\Bkappa  }{{\boldcommand{\kappa}        }}
+\newcommand{\Blambda }{{\boldcommand{\lambda}       }}
+\newcommand{\Bmu     }{{\boldcommand{\mu}           }}
+\newcommand{\Bnu     }{{\boldcommand{\nu}           }}
+\newcommand{\Bxi     }{{\boldcommand{\xi}           }}
+\newcommand{\Bpi     }{{\boldcommand{\pi}           }}
+\newcommand{\Brho    }{{\boldcommand{\rho}          }}
+\newcommand{\Bvrho   }{{\boldcommand{\varrho}       }}
+\newcommand{\Bsigma  }{{\boldcommand{\sigma}        }}
+\newcommand{\Bvsigma }{{\boldcommand{\varsigma}     }}
+\newcommand{\Btau    }{{\boldcommand{\tau}          }}
+\newcommand{\Bupsilon}{{\boldcommand{\upsilon}      }}
+\newcommand{\Bphi    }{{\boldcommand{\phi}          }}
+\newcommand{\Bvarphi }{{\boldcommand{\varphi}       }}
+\newcommand{\Bchi    }{{\boldcommand{\chi}          }}
+\newcommand{\Bpsi    }{{\boldcommand{\psi}          }}
+\newcommand{\Bomega  }{{\boldcommand{\omega}        }}
+\newcommand{\BGamma  }{{\boldcommand{\Gamma}        }}
+\newcommand{\BDelta  }{{\boldcommand{\Delta}        }}
+\newcommand{\BTheta  }{{\boldcommand{\Theta}        }}
+\newcommand{\BLambda }{{\boldcommand{\Lambda}       }}
+\newcommand{\BXi     }{{\boldcommand{\Xi}           }}
+\newcommand{\BPi     }{{\boldcommand{\Pi}           }}
+\newcommand{\BSigma  }{{\boldcommand{\Sigma}        }}
+\newcommand{\BUpsilon}{{\boldcommand{\Upsilon}      }}
+\newcommand{\BPhi    }{{\boldcommand{\Phi}          }}
+\newcommand{\BPsi    }{{\boldcommand{\Psi}          }}
+\newcommand{\BOmega  }{{\boldcommand{\Omega}        }}
