--- a/fragments/bold.sty
+++ b/fragments/bold.sty
@@ -1,66 +1,66 @@
 % Bold italic letters
-\newcommand{\BA}{{\bm{A}}}
-\newcommand{\BB}{{\bm{B}}}
-\newcommand{\BC}{{\bm{C}}}
-\newcommand{\BD}{{\bm{D}}}
-\newcommand{\BE}{{\bm{E}}}
-\newcommand{\BF}{{\bm{F}}}
-\newcommand{\BG}{{\bm{G}}}
-\newcommand{\BH}{{\bm{H}}}
-\newcommand{\BI}{{\bm{I}}}
-\newcommand{\BJ}{{\bm{J}}}
-\newcommand{\BK}{{\bm{K}}}
-\newcommand{\BL}{{\bm{L}}}
-\newcommand{\BM}{{\bm{M}}}
-\newcommand{\BN}{{\bm{N}}}
-\newcommand{\BO}{{\bm{O}}}
-\newcommand{\BP}{{\bm{P}}}
-\newcommand{\BQ}{{\bm{Q}}}
-\newcommand{\BR}{{\bm{R}}}
-\newcommand{\BS}{{\bm{S}}}
-\newcommand{\BT}{{\bm{T}}}
-\newcommand{\BU}{{\bm{U}}}
-\newcommand{\BV}{{\bm{V}}}
-\newcommand{\BW}{{\bm{W}}}
-\newcommand{\BX}{{\bm{X}}}
-\newcommand{\BY}{{\bm{Y}}}
-\newcommand{\BZ}{{\bm{Z}}}
-\newcommand{\Ba}{{\bm{a}}}
-\newcommand{\Bb}{{\bm{b}}}
-\newcommand{\Bc}{{\bm{c}}}
-\newcommand{\Bd}{{\bm{d}}}
-\newcommand{\Be}{{\bm{e}}}
-\newcommand{\Bf}{{\bm{f}}}
-\newcommand{\Bg}{{\bm{g}}}
-\newcommand{\Bh}{{\bm{h}}}
-\newcommand{\Bi}{{\bm{i}}}
-\newcommand{\Bj}{{\bm{j}}}
-\newcommand{\Bk}{{\bm{k}}}
-\newcommand{\Bl}{{\bm{l}}}
-\newcommand{\Bm}{{\bm{m}}}
-\newcommand{\Bn}{{\bm{n}}}
-\newcommand{\Bo}{{\bm{o}}}
-\newcommand{\Bp}{{\bm{p}}}
-\newcommand{\Bq}{{\bm{q}}}
-\newcommand{\Br}{{\bm{r}}}
-\newcommand{\Bs}{{\bm{s}}}
-\newcommand{\Bt}{{\bm{t}}}
-\newcommand{\Bu}{{\bm{u}}}
-\newcommand{\Bv}{{\bm{v}}}
-\newcommand{\Bw}{{\bm{w}}}
-\newcommand{\Bx}{{\bm{x}}}
-\newcommand{\By}{{\bm{y}}}
-\newcommand{\Bz}{{\bm{z}}}
+\newcommand{\BA}{{\boldcommand{A}}}
+\newcommand{\BB}{{\boldcommand{B}}}
+\newcommand{\BC}{{\boldcommand{C}}}
+\newcommand{\BD}{{\boldcommand{D}}}
+\newcommand{\BE}{{\boldcommand{E}}}
+\newcommand{\BF}{{\boldcommand{F}}}
+\newcommand{\BG}{{\boldcommand{G}}}
+\newcommand{\BH}{{\boldcommand{H}}}
+\newcommand{\BI}{{\boldcommand{I}}}
+\newcommand{\BJ}{{\boldcommand{J}}}
+\newcommand{\BK}{{\boldcommand{K}}}
+\newcommand{\BL}{{\boldcommand{L}}}
+\newcommand{\BM}{{\boldcommand{M}}}
+\newcommand{\BN}{{\boldcommand{N}}}
+\newcommand{\BO}{{\boldcommand{O}}}
+\newcommand{\BP}{{\boldcommand{P}}}
+\newcommand{\BQ}{{\boldcommand{Q}}}
+\newcommand{\BR}{{\boldcommand{R}}}
+\newcommand{\BS}{{\boldcommand{S}}}
+\newcommand{\BT}{{\boldcommand{T}}}
+\newcommand{\BU}{{\boldcommand{U}}}
+\newcommand{\BV}{{\boldcommand{V}}}
+\newcommand{\BW}{{\boldcommand{W}}}
+\newcommand{\BX}{{\boldcommand{X}}}
+\newcommand{\BY}{{\boldcommand{Y}}}
+\newcommand{\BZ}{{\boldcommand{Z}}}
+\newcommand{\Ba}{{\boldcommand{a}}}
+\newcommand{\Bb}{{\boldcommand{b}}}
+\newcommand{\Bc}{{\boldcommand{c}}}
+\newcommand{\Bd}{{\boldcommand{d}}}
+\newcommand{\Be}{{\boldcommand{e}}}
+\newcommand{\Bf}{{\boldcommand{f}}}
+\newcommand{\Bg}{{\boldcommand{g}}}
+\newcommand{\Bh}{{\boldcommand{h}}}
+\newcommand{\Bi}{{\boldcommand{i}}}
+\newcommand{\Bj}{{\boldcommand{j}}}
+\newcommand{\Bk}{{\boldcommand{k}}}
+\newcommand{\Bl}{{\boldcommand{l}}}
+\newcommand{\Bm}{{\boldcommand{m}}}
+\newcommand{\Bn}{{\boldcommand{n}}}
+\newcommand{\Bo}{{\boldcommand{o}}}
+\newcommand{\Bp}{{\boldcommand{p}}}
+\newcommand{\Bq}{{\boldcommand{q}}}
+\newcommand{\Br}{{\boldcommand{r}}}
+\newcommand{\Bs}{{\boldcommand{s}}}
+\newcommand{\Bt}{{\boldcommand{t}}}
+\newcommand{\Bu}{{\boldcommand{u}}}
+\newcommand{\Bv}{{\boldcommand{v}}}
+\newcommand{\Bw}{{\boldcommand{w}}}
+\newcommand{\Bx}{{\boldcommand{x}}}
+\newcommand{\By}{{\boldcommand{y}}}
+\newcommand{\Bz}{{\boldcommand{z}}}
 
 % bold italic numbers
-\newcommand{\Bzero }{{\bm{0}}}
-\newcommand{\Bone  }{{\bm{1}}}
-\newcommand{\Btwo  }{{\bm{2}}}
-\newcommand{\Bthree}{{\bm{3}}}
-\newcommand{\Bfour }{{\bm{4}}}
-\newcommand{\Bfive }{{\bm{5}}}
-\newcommand{\Bsix  }{{\bm{6}}}
-\newcommand{\Bseven}{{\bm{7}}}
-\newcommand{\Beight}{{\bm{8}}}
-\newcommand{\Bnine }{{\bm{9}}}
+\newcommand{\Bzero }{{\boldcommand{0}}}
+\newcommand{\Bone  }{{\boldcommand{1}}}
+\newcommand{\Btwo  }{{\boldcommand{2}}}
+\newcommand{\Bthree}{{\boldcommand{3}}}
+\newcommand{\Bfour }{{\boldcommand{4}}}
+\newcommand{\Bfive }{{\boldcommand{5}}}
+\newcommand{\Bsix  }{{\boldcommand{6}}}
+\newcommand{\Bseven}{{\boldcommand{7}}}
+\newcommand{\Beight}{{\boldcommand{8}}}
+\newcommand{\Bnine }{{\boldcommand{9}}}
 
