--- a/fragments/greek_upright_bold_lowercase.sty
+++ b/fragments/greek_upright_bold_lowercase.sty
@@ -1,26 +1,26 @@
 % Upright bold lowercase Greek
-\newcommand{\Valpha  }{{\bm{\upalpha     }}}
-\newcommand{\Vbeta   }{{\bm{\upbeta      }}}
-\newcommand{\Vgamma  }{{\bm{\upgamma     }}}
-\newcommand{\Vdelta  }{{\bm{\updelta     }}}
-\newcommand{\Vepsilon}{{\bm{\upepsilon   }}}
-\newcommand{\Vvareps }{{\bm{\upvarepsilon}}}
-\newcommand{\Vzeta   }{{\bm{\upzeta      }}}
-\newcommand{\Veta    }{{\bm{\upeta       }}}
-\newcommand{\Vtheta  }{{\bm{\uptheta     }}}
-\newcommand{\Vvarthe }{{\bm{\upvartheta  }}}
-\newcommand{\Viota   }{{\bm{\upiota      }}}
-\newcommand{\Vkappa  }{{\bm{\upkappa     }}}
-\newcommand{\Vlambda }{{\bm{\uplambda    }}}
-\newcommand{\Vmu     }{{\bm{\upmu        }}}
-\newcommand{\Vnu     }{{\bm{\upnu        }}}
-\newcommand{\Vxi     }{{\bm{\upxi        }}}
-\newcommand{\Vpi     }{{\bm{\uppi        }}}
-\newcommand{\Vrho    }{{\bm{\uprho       }}}
-\newcommand{\Vsigma  }{{\bm{\upsigma     }}}
-\newcommand{\Vtau    }{{\bm{\uptau       }}}
-\newcommand{\Vupsilon}{{\bm{\upupsilon   }}}
-\newcommand{\Vphi    }{{\bm{\upphi       }}}
-\newcommand{\Vchi    }{{\bm{\upchi       }}}
-\newcommand{\Vpsi    }{{\bm{\uppsi       }}}
-\newcommand{\Vomega  }{{\bm{\upomega     }}}
+\newcommand{\Valpha  }{{\boldcommand{\upalpha     }}}
+\newcommand{\Vbeta   }{{\boldcommand{\upbeta      }}}
+\newcommand{\Vgamma  }{{\boldcommand{\upgamma     }}}
+\newcommand{\Vdelta  }{{\boldcommand{\updelta     }}}
+\newcommand{\Vepsilon}{{\boldcommand{\upepsilon   }}}
+\newcommand{\Vvareps }{{\boldcommand{\upvarepsilon}}}
+\newcommand{\Vzeta   }{{\boldcommand{\upzeta      }}}
+\newcommand{\Veta    }{{\boldcommand{\upeta       }}}
+\newcommand{\Vtheta  }{{\boldcommand{\uptheta     }}}
+\newcommand{\Vvarthe }{{\boldcommand{\upvartheta  }}}
+\newcommand{\Viota   }{{\boldcommand{\upiota      }}}
+\newcommand{\Vkappa  }{{\boldcommand{\upkappa     }}}
+\newcommand{\Vlambda }{{\boldcommand{\uplambda    }}}
+\newcommand{\Vmu     }{{\boldcommand{\upmu        }}}
+\newcommand{\Vnu     }{{\boldcommand{\upnu        }}}
+\newcommand{\Vxi     }{{\boldcommand{\upxi        }}}
+\newcommand{\Vpi     }{{\boldcommand{\uppi        }}}
+\newcommand{\Vrho    }{{\boldcommand{\uprho       }}}
+\newcommand{\Vsigma  }{{\boldcommand{\upsigma     }}}
+\newcommand{\Vtau    }{{\boldcommand{\uptau       }}}
+\newcommand{\Vupsilon}{{\boldcommand{\upupsilon   }}}
+\newcommand{\Vphi    }{{\boldcommand{\upphi       }}}
+\newcommand{\Vchi    }{{\boldcommand{\upchi       }}}
+\newcommand{\Vpsi    }{{\boldcommand{\uppsi       }}}
+\newcommand{\Vomega  }{{\boldcommand{\upomega     }}}
