--- a/fragments/sans_bold.sty
+++ b/fragments/sans_bold.sty
@@ -1,67 +1,67 @@
 % Bold Sans-serif
 % \DeclareMathAlphabet{\mathbfsf}{\encodingdefault}{\sfdefault}{bx}{n}
 
-\newcommand{\BFA}{{\bm{\mathsf{A}}}}
-\newcommand{\BFB}{{\bm{\mathsf{B}}}}
-\newcommand{\BFC}{{\bm{\mathsf{C}}}}
-\newcommand{\BFD}{{\bm{\mathsf{D}}}}
-\newcommand{\BFE}{{\bm{\mathsf{E}}}}
-\newcommand{\BFF}{{\bm{\mathsf{F}}}}
-\newcommand{\BFG}{{\bm{\mathsf{G}}}}
-\newcommand{\BFH}{{\bm{\mathsf{H}}}}
-\newcommand{\BFI}{{\bm{\mathsf{I}}}}
-\newcommand{\BFJ}{{\bm{\mathsf{J}}}}
-\newcommand{\BFK}{{\bm{\mathsf{K}}}}
-\newcommand{\BFL}{{\bm{\mathsf{L}}}}
-\newcommand{\BFM}{{\bm{\mathsf{M}}}}
-\newcommand{\BFN}{{\bm{\mathsf{N}}}}
-\newcommand{\BFO}{{\bm{\mathsf{O}}}}
-\newcommand{\BFP}{{\bm{\mathsf{P}}}}
-\newcommand{\BFQ}{{\bm{\mathsf{Q}}}}
-\newcommand{\BFR}{{\bm{\mathsf{R}}}}
-\newcommand{\BFS}{{\bm{\mathsf{S}}}}
-\newcommand{\BFT}{{\bm{\mathsf{T}}}}
-\newcommand{\BFU}{{\bm{\mathsf{U}}}}
-\newcommand{\BFV}{{\bm{\mathsf{V}}}}
-\newcommand{\BFW}{{\bm{\mathsf{W}}}}
-\newcommand{\BFX}{{\bm{\mathsf{X}}}}
-\newcommand{\BFY}{{\bm{\mathsf{Y}}}}
-\newcommand{\BFZ}{{\bm{\mathsf{Z}}}}
-\newcommand{\BFa}{{\bm{\mathsf{a}}}}
-\newcommand{\BFb}{{\bm{\mathsf{b}}}}
-\newcommand{\BFc}{{\bm{\mathsf{c}}}}
-\newcommand{\BFd}{{\bm{\mathsf{d}}}}
-\newcommand{\BFe}{{\bm{\mathsf{e}}}}
-\newcommand{\BFf}{{\bm{\mathsf{f}}}}
-\newcommand{\BFg}{{\bm{\mathsf{g}}}}
-\newcommand{\BFh}{{\bm{\mathsf{h}}}}
-\newcommand{\BFi}{{\bm{\mathsf{i}}}}
-\newcommand{\BFj}{{\bm{\mathsf{j}}}}
-\newcommand{\BFk}{{\bm{\mathsf{k}}}}
-\newcommand{\BFl}{{\bm{\mathsf{l}}}}
-\newcommand{\BFm}{{\bm{\mathsf{m}}}}
-\newcommand{\BFn}{{\bm{\mathsf{n}}}}
-\newcommand{\BFo}{{\bm{\mathsf{o}}}}
-\newcommand{\BFp}{{\bm{\mathsf{p}}}}
-\newcommand{\BFq}{{\bm{\mathsf{q}}}}
-\newcommand{\BFr}{{\bm{\mathsf{r}}}}
-\newcommand{\BFs}{{\bm{\mathsf{s}}}}
-\newcommand{\BFt}{{\bm{\mathsf{t}}}}
-\newcommand{\BFu}{{\bm{\mathsf{u}}}}
-\newcommand{\BFv}{{\bm{\mathsf{v}}}}
-\newcommand{\BFw}{{\bm{\mathsf{w}}}}
-\newcommand{\BFx}{{\bm{\mathsf{x}}}}
-\newcommand{\BFy}{{\bm{\mathsf{y}}}}
-\newcommand{\BFz}{{\bm{\mathsf{z}}}}
+\newcommand{\BFA}{{\boldcommand{\mathsf{A}}}}
+\newcommand{\BFB}{{\boldcommand{\mathsf{B}}}}
+\newcommand{\BFC}{{\boldcommand{\mathsf{C}}}}
+\newcommand{\BFD}{{\boldcommand{\mathsf{D}}}}
+\newcommand{\BFE}{{\boldcommand{\mathsf{E}}}}
+\newcommand{\BFF}{{\boldcommand{\mathsf{F}}}}
+\newcommand{\BFG}{{\boldcommand{\mathsf{G}}}}
+\newcommand{\BFH}{{\boldcommand{\mathsf{H}}}}
+\newcommand{\BFI}{{\boldcommand{\mathsf{I}}}}
+\newcommand{\BFJ}{{\boldcommand{\mathsf{J}}}}
+\newcommand{\BFK}{{\boldcommand{\mathsf{K}}}}
+\newcommand{\BFL}{{\boldcommand{\mathsf{L}}}}
+\newcommand{\BFM}{{\boldcommand{\mathsf{M}}}}
+\newcommand{\BFN}{{\boldcommand{\mathsf{N}}}}
+\newcommand{\BFO}{{\boldcommand{\mathsf{O}}}}
+\newcommand{\BFP}{{\boldcommand{\mathsf{P}}}}
+\newcommand{\BFQ}{{\boldcommand{\mathsf{Q}}}}
+\newcommand{\BFR}{{\boldcommand{\mathsf{R}}}}
+\newcommand{\BFS}{{\boldcommand{\mathsf{S}}}}
+\newcommand{\BFT}{{\boldcommand{\mathsf{T}}}}
+\newcommand{\BFU}{{\boldcommand{\mathsf{U}}}}
+\newcommand{\BFV}{{\boldcommand{\mathsf{V}}}}
+\newcommand{\BFW}{{\boldcommand{\mathsf{W}}}}
+\newcommand{\BFX}{{\boldcommand{\mathsf{X}}}}
+\newcommand{\BFY}{{\boldcommand{\mathsf{Y}}}}
+\newcommand{\BFZ}{{\boldcommand{\mathsf{Z}}}}
+\newcommand{\BFa}{{\boldcommand{\mathsf{a}}}}
+\newcommand{\BFb}{{\boldcommand{\mathsf{b}}}}
+\newcommand{\BFc}{{\boldcommand{\mathsf{c}}}}
+\newcommand{\BFd}{{\boldcommand{\mathsf{d}}}}
+\newcommand{\BFe}{{\boldcommand{\mathsf{e}}}}
+\newcommand{\BFf}{{\boldcommand{\mathsf{f}}}}
+\newcommand{\BFg}{{\boldcommand{\mathsf{g}}}}
+\newcommand{\BFh}{{\boldcommand{\mathsf{h}}}}
+\newcommand{\BFi}{{\boldcommand{\mathsf{i}}}}
+\newcommand{\BFj}{{\boldcommand{\mathsf{j}}}}
+\newcommand{\BFk}{{\boldcommand{\mathsf{k}}}}
+\newcommand{\BFl}{{\boldcommand{\mathsf{l}}}}
+\newcommand{\BFm}{{\boldcommand{\mathsf{m}}}}
+\newcommand{\BFn}{{\boldcommand{\mathsf{n}}}}
+\newcommand{\BFo}{{\boldcommand{\mathsf{o}}}}
+\newcommand{\BFp}{{\boldcommand{\mathsf{p}}}}
+\newcommand{\BFq}{{\boldcommand{\mathsf{q}}}}
+\newcommand{\BFr}{{\boldcommand{\mathsf{r}}}}
+\newcommand{\BFs}{{\boldcommand{\mathsf{s}}}}
+\newcommand{\BFt}{{\boldcommand{\mathsf{t}}}}
+\newcommand{\BFu}{{\boldcommand{\mathsf{u}}}}
+\newcommand{\BFv}{{\boldcommand{\mathsf{v}}}}
+\newcommand{\BFw}{{\boldcommand{\mathsf{w}}}}
+\newcommand{\BFx}{{\boldcommand{\mathsf{x}}}}
+\newcommand{\BFy}{{\boldcommand{\mathsf{y}}}}
+\newcommand{\BFz}{{\boldcommand{\mathsf{z}}}}
 
-\newcommand{\BFzero }{{\bm{\mathsf{0}}}}
-\newcommand{\BFone  }{{\bm{\mathsf{1}}}}
-\newcommand{\BFtwo  }{{\bm{\mathsf{2}}}}
-\newcommand{\BFthree}{{\bm{\mathsf{3}}}}
-\newcommand{\BFfour }{{\bm{\mathsf{4}}}}
-\newcommand{\BFfive }{{\bm{\mathsf{5}}}}
-\newcommand{\BFsix  }{{\bm{\mathsf{6}}}}
-\newcommand{\BFseven}{{\bm{\mathsf{7}}}}
-\newcommand{\BFeight}{{\bm{\mathsf{8}}}}
-\newcommand{\BFnine }{{\bm{\mathsf{9}}}}
+\newcommand{\BFzero }{{\boldcommand{\mathsf{0}}}}
+\newcommand{\BFone  }{{\boldcommand{\mathsf{1}}}}
+\newcommand{\BFtwo  }{{\boldcommand{\mathsf{2}}}}
+\newcommand{\BFthree}{{\boldcommand{\mathsf{3}}}}
+\newcommand{\BFfour }{{\boldcommand{\mathsf{4}}}}
+\newcommand{\BFfive }{{\boldcommand{\mathsf{5}}}}
+\newcommand{\BFsix  }{{\boldcommand{\mathsf{6}}}}
+\newcommand{\BFseven}{{\boldcommand{\mathsf{7}}}}
+\newcommand{\BFeight}{{\boldcommand{\mathsf{8}}}}
+\newcommand{\BFnine }{{\boldcommand{\mathsf{9}}}}
 
