--- a/shortsym.sty
+++ b/shortsym.sty
@@ -6,7 +6,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 
-%% Global indentation option
+% Use bm instead of boldsymbol:
 \newif\if@usebm\@usebmfalse
 \DeclareOption{bm}{
   \@usebmtrue
